# S3E2_SAS

./: AcceptanceCriterion.cpp  CMakeLists.txt  ExplorationCriterion.cpp  README.md  main.cpp
Rproyectos/: data2M_all.csv  script_S3E2_SAS.R
base/include/: CoolingScheme.hpp  sas.hpp
base/src/: CoolingScheme.cpp  ExplorationCriterion.cpp  main.cpp  sas.cpp
data/: alumnos_utm.txt  colegios_utm.txt
experiments/: info.txt
experiments/exp1/: .gitignore  get_info.bash  info_save_test.txt  script_test.bash
experiments/exp10/: get_info.bash  info_save_test.txt  script_test.bash
experiments/exp11/: get_info.bash  info_save_test.txt  script_test.bash
experiments/exp12/: get_info.bash  info_save_test.txt  script_test.bash
experiments/exp13/: get_info.bash  info_save_test.txt  script_test.bash
experiments/exp14/: get_info.bash  get_info2.bash  info_save_test.txt  info_save_test2.txt  script_test2.bash  script_test3.bash
experiments/exp2/: .gitignore  get_info.bash  info_save_test.txt  script_test.bash
experiments/exp3/: get_info.bash  info_save_test.txt  script_test.bash
experiments/exp4/: get_info.bash  info_save_test.txt  script_test.bash
experiments/exp5/: get_info.bash  info_save_test.txt  script_test.bash
experiments/exp6/: get_info.bash  info_save_test.txt  script_test.bash
experiments/exp7/: get_info.bash  info_save_test.txt  script_test.bash
experiments/exp8/: get_info.bash  info_save_test.txt  (+1 more)
include/: AcceptanceCriterion.hpp  ExplorationCriterion.hpp  sas.hpp
src/: AcceptanceCriterion.cpp  ExplorationCriterion.cpp  main.cpp  sas.cpp
(+34735 files in other folders)
